--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-24  Richard Henderson  <rth@redhat.com>
+
+	* objc/execute/formal_protocol-6.x: New XFAIL.
+
 2002-03-24  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* gcc.dg/20020312-2.c [__MMIX__]: No pic register.
