* objc/execute/formal_protocol-6.x: New XFAIL.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51284 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-24  Richard Henderson  <rth@redhat.com>
+
+	* objc/execute/formal_protocol-6.x: New XFAIL.
+
 2002-03-25  David Billinghurst  <David.Billinghurst@riotinto.com>
 
 	* gcc.dg/weak-1.c:  Early return from dg-final on platforms
