--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-03-24  Richard Henderson  <rth@redhat.com>
 
+	* config/alpha/elf.h (STARTFILE_SPEC): Use crtbeginT with -static.
+
+2002-03-24  Richard Henderson  <rth@redhat.com>
+
 	* recog.c (peephole2_optimize): Split blocks when EH insns are 
 	generated in the middle of a block.  Do global life update if
 	zapped EH edges.
