--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,14 @@
+2002-03-25  David Billinghurst  <David.Billinghurst@riotinto.com>
+
+	* g77.dg/f77-edit-apostrophe-out.f: New test
+	* g77.dg/f77-edit-h-out.f: New test
+	* g77.dg/f77-edit-t-in.f: New test
+	* g77.dg/f77-edit-t-out.f: New test
+	* g77.dg/f77-edit-x-out.f: New test
+	* g77.dg/f77-edit-slash-out.f: New test
+	* g77.dg/f77-edit-colon-out.f: New test
+	* g77.dg/f77-edit-s-out.f: New test
+
 2002-03-24  Richard Henderson  <rth@redhat.com>
 
 	* objc/execute/formal_protocol-6.x: New XFAIL.
