--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2002-03-24  Richard Henderson  <rth@redhat.com>
 
+	* gcc.dg/weak-1.c: Use -fno-common.
+
+2002-03-24  Richard Henderson  <rth@redhat.com>
+
 	* objc/execute/formal_protocol-6.x: New XFAIL.
 
 2002-03-24  Hans-Peter Nilsson  <hp@bitrange.com>
