--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-24  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* java/io/PushbackReader.java: Reformat.
+
 2002-03-24  Tom Tromey  <tromey@redhat.com>
 
 	* java/awt/TextComponent.java (TextComponent): Editable by
