--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2002-03-24  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* java/io/PushbackReader.java: Reformat.
+
+	* java/io/FileInputStream.java (skip): Call fd.getFilePointer() and
+	calculate correct number of bytes skipped.
+
 2002-03-24  Eric Blake  <ebb9@email.byu.edu>
 
 	* java/beans/IntrospectionException.java: Update to 1.4.
