Based on patch from Intel's ORP team: 	* java/io/PushbackInputStream.java (available): Calculate correct 	number of bytes in buffer. 	(read): Remove redundant bound check. Return bytes from both the 	buffer and the stream.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51296 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -4,6 +4,12 @@
 
 	* java/io/FileInputStream.java (skip): Call fd.getFilePointer() and
 	calculate correct number of bytes skipped.
+	
+	Based on patch from Intel's ORP team:
+	* java/io/PushbackInputStream.java (available): Calculate correct 
+	number of bytes in buffer.
+	(read): Remove redundant bound check. Return bytes from both the
+	buffer and the stream.
 
 2002-03-24  Tom Tromey  <tromey@redhat.com>
 
