--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,5 +1,7 @@
 2002-03-24  Richard Henderson  <rth@redhat.com>
 
+	* gcc.c-torture/compile/920625-1.x: XFAIL -O1 too.
+
 	* gcc.dg/weak-1.c: Use -fno-common.
 
 2002-03-24  Richard Henderson  <rth@redhat.com>
