--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-25  Tom Tromey  <tromey@redhat.com>
+
+	* java/awt/Component.java (processEvent): Check ComponentEvent
+	after KeyEvent.
+
 2002-03-24  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* java/io/PushbackReader.java: Reformat.
