PR c++/6037 	* decl.c (start_enum): Don't set TREE_ADDRESSABLE on TREE_LIST node.
	* g++.dg/other/enum1.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51303 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/cp/ChangeLog
+++ b/gcc-3_1-branch/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-25  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/6037
+	* decl.c (start_enum): Don't set TREE_ADDRESSABLE on TREE_LIST node.
+
 2002-03-22  Jeff Knaggs  <jknaggs@redhat.com>
 
 	* typeck.c (expand_ptrmemfunc_cst): Scale idx down to an index
