--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-25  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/other/enum1.C: New test.
+
 2002-03-24  Richard Henderson  <rth@redhat.com>
 
 	* gcc.c-torture/compile/920625-1.x: XFAIL -O1 too.
