* regrename.c (build_def_use): Share RTL between MATCH_OPERATOR and 	corresponding MATCH_DUP.
	* gcc.c-torture/compile/20020323-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51304 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-25  Jakub Jelinek  <jakub@redhat.com>
+
+	* regrename.c (build_def_use): Share RTL between MATCH_OPERATOR and
+	corresponding MATCH_DUP.
+
 2002-03-24  Richard Henderson  <rth@redhat.com>
 
 	* unroll.c (unroll_loop): Zero label_map.
