--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -2,6 +2,8 @@
 
 	* g++.dg/other/enum1.C: New test.
 
+	* gcc.c-torture/compile/20020323-1.c: New test.
+
 2002-03-24  Richard Henderson  <rth@redhat.com>
 
 	* gcc.c-torture/compile/920625-1.x: XFAIL -O1 too.
