--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-25  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/compile/20020323-1.c: New test.
+
 2002-03-24  Richard Henderson  <rth@redhat.com>
 
 	* gcc.dg/weak-1.c: Use -fno-common.
