--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-03-25  Jakub Jelinek  <jakub@redhat.com>
 
+	PR target/6043
+	* expr.c (emit_group_store): Handle storing into CONCAT.
+
+2002-03-25  Jakub Jelinek  <jakub@redhat.com>
+
 	* regrename.c (build_def_use): Share RTL between MATCH_OPERATOR and
 	corresponding MATCH_DUP.
 
