--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -2,6 +2,8 @@
 
 	* gcc.c-torture/compile/20020323-1.c: New test.
 
+	* g++.dg/opt/conj2.C: New test.
+
 2002-03-24  Richard Henderson  <rth@redhat.com>
 
 	* gcc.dg/weak-1.c: Use -fno-common.
