* regrename.c (build_def_use): Move recog_memoized 	before extract_insn.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51312 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-03-25  Jakub Jelinek  <jakub@redhat.com>
 
+	* regrename.c (build_def_use): Move recog_memoized
+	before extract_insn.
+
+2002-03-25  Jakub Jelinek  <jakub@redhat.com>
+
 	PR target/6043
 	* expr.c (emit_group_store): Handle storing into CONCAT.
 
