--- a/gcc-3_1-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_1-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,10 @@
+2002-03-25  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
+            Paolo Carlini  <pcarlini@unitus.it>
+
+	* testsuite/22_locale/codecvt_members_unicode_char.cc
+	(test01, test02): Fix i_lit_base arrays, making them
+	independent from the endianness of the platform.
+
 2002-03-22  Benjamin Kosnik  <bkoz@redhat.com>
 	
 	* src/vterminate.cc: Format, -fno-exceptions cleanup.
