* g++.old-deja/g++.jason/thunk3.C: Add xtensa-*-* to list of         targets using generic thunk support.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51319 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-25  Bob Wilson  <bob.wilson@acm.org>
+
+	* g++.old-deja/g++.jason/thunk3.C: Add xtensa-*-* to list of
+	targets using generic thunk support.
+
 2002-03-25  Jakub Jelinek  <jakub@redhat.com>
 
 	* g++.dg/other/enum1.C: New test.
