* linux_threads.c (GC_get_nprocs): Close file descriptor.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51323 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/boehm-gc/ChangeLog
+++ b/gcc-3_1-branch/boehm-gc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-24  Jeff Sturm  <jsturm@one-point.com>
+
+	* linux_threads.c (GC_get_nprocs): Close file descriptor.
+
 2002-03-15  Anthony Green  <green@redhat.com>
 
 	* misc.c (GC_init_inner): Initialize GC_write_cs before use.
