* c-decl.c (maybe_build_cleanup): Remove. 	* expr.c (expand_expr): Use langhook. 	* langhooks-def.h (lhd_return_null_tree, 	LANG_HOOKS_MAYBE_BUILD_CLEANUP): New. 	(LANGHOOKS_INITIALIZER): Update. 	* langhooks.c (lhd_return_null_tree): New. 	* langhooks.h (struct lang_hooks): New hook. 	* tree-inline.c (initialize_inlined_parameters): Use langhook. 	* tree.h (maybe_build_cleanup): Remove. ada: 	* misc.c (maybe_build_cleanup): Remove. cp: 	* cp-tree.h (cxx_maybe_build_cleanup): New. 	* decl.c (destroy_local_var, hack_incomplete_structures): Update. 	(maybe_build_cleanup): Rename cxx_maybe_build_cleanup. 	* tree.c (build_target_expr): Update. f: 	* com.c (maybe_build_cleanup): Remove. java: 	* decl.c (maybe_build_cleanup): Remove.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51324 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2002-03-25  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* c-decl.c (maybe_build_cleanup): Remove.
+	* expr.c (expand_expr): Use langhook.
+	* langhooks-def.h (lhd_return_null_tree,
+	LANG_HOOKS_MAYBE_BUILD_CLEANUP): New.
+	(LANGHOOKS_INITIALIZER): Update.
+	* langhooks.c (lhd_return_null_tree): New.
+	* langhooks.h (struct lang_hooks): New hook.
+	* tree-inline.c (initialize_inlined_parameters): Use langhook.
+	* tree.h (maybe_build_cleanup): Remove.
+
 2002-03-25  Jakub Jelinek  <jakub@redhat.com>
 
 	* regrename.c (build_def_use): Move recog_memoized
