--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2002-03-25  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* cp-tree.h (cxx_maybe_build_cleanup): New.
+	* decl.c (destroy_local_var, hack_incomplete_structures): Update.
+	(maybe_build_cleanup): Rename cxx_maybe_build_cleanup.
+	* tree.c (build_target_expr): Update.
+
 2002-03-24  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* decl2.c (cxx_decode_option): Handle -E.
