--- a/gcc-3_1-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_1-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,13 @@
+2002-03-25  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/5676
+	* acinclude.m4 (GLIBCPP_ENABLE_SJLJ_EXCEPTIONS): Pass -fexceptions
+	explicitely.
+	* aclocal.m4: Rebuilt.
+	* configure: Rebuilt.
+	* configure.target (mcore-*-pe*): Add -frtti -fno-exceptions
+	by default to c++ flags.
+
 2002-03-25  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
             Paolo Carlini  <pcarlini@unitus.it>
 
