--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2002-03-25  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	Fixes for: PR bootstrap/3591, target/5676
+	* config/mcore/mcore.h (CC1_SPEC): Define only if not already
+	defined.  Do not disable exceptions or rtti.
+	* config/mcore/mcore-pe.h (CC1_SPEC): Define before including
+	mcore.h.  Disable exceptions and rtti, since they are not
+	supported by EPOC.
+
 2002-03-25  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* c-decl.c (maybe_build_cleanup): Remove.
