Fix for PR java/5368: 	* parse.y (resolve_qualified_expression_name): Use decl not field_decl 	when printing error message.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51327 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-22  Mark Wielaard  <mark@klomp.org>
+
+	Fix for PR java/5368:
+	* parse.y (resolve_qualified_expression_name): Use decl not field_decl
+	when printing error message.
+
 2002-03-25  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* decl.c (maybe_build_cleanup): Remove.
