--- a/gcc-3_1-branch/gcc/java/ChangeLog
+++ b/gcc-3_1-branch/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-22  Mark Wielaard  <mark@klomp.org>
+
+	Fix for PR java/5368:
+	* parse.y (resolve_qualified_expression_name): Use decl not field_decl
+	when printing error message.
+
 2002-03-22  Tom Tromey  <tromey@redhat.com>
             Andrew Haley  <aph@cambridge.redhat.com>
 
