--- a/gcc-3_1-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_1-branch/libstdc++-v3/ChangeLog
@@ -39,6 +39,25 @@
 	* include/bits/locale_facets.tcc
 	(collate::do_transform): Simplify.
 
+2002-03-18  Philipp Thomas  <pthomas@suse.de>
+
+	* include/backward/hash_map.h: hash, hashtable, hash_map and
+	hash_multimap are in namespace __gnu_cxx.
+	include/backward/hash_set.h: hash, hashtable, hash_set and
+	hash_multiset are in namespace __gnu_cxx.
+	include/backward/hashtable.h: hash and hashtable are in 
+	namespace __gnu_cxx.
+	include/backward/rope.h: char_producer, sequence_buffer,
+	rope, crope and wrope are in namespace __gnu_cxx.
+	include/backward/slist.h: slist is in namespace __gnu_cxx.
+	* testsuite/backward/header_hash_map_h.cc
+	testsuite/backward/header_hash_set_h.cc
+	testsuite/backward/header_hashtable_h.cc
+	testsuite/backward/header_rope_h.cc
+	testsuite/backward/header_slist_h.cc
+	testsuite/backward/header_tempbuf_h.cc: New tests for
+	checking that we're using the correct namespace.
+
 2002-03-17  Jason Merrill  <jason@redhat.com>
 
 	PR c++/4381
@@ -47,7 +66,12 @@
 	(__cxa_call_unexpected): Pass it.
 	(PERSONALITY_FUNCTION): Likewise.  Use get_adjusted_ptr.
 
-2002-03-16  Paolo Carlini  <pcarlini@unitus.it>
+2002-03-15  Anthony Green  <green@redhat.com>
+
+	* configure.in: Remove useless is_mingw32.
+	* configure: Rebuilt.
+
+2002-03-15  Paolo Carlini  <pcarlini@unitus.it>
 
 	* testsuite/22_locale/collate_members_char.cc
 	(test01): compare the result of collate::compare with
@@ -56,11 +80,6 @@
 	(test01): values returned by collate::compare are
 	normalized, therefore test against +-1.
 	* testsuite/22_locale/collate_members_wchar_t.cc: Ditto.
-
-Fri Mar 15 09:55:49 2002  Anthony Green  <green@redhat.com>
-
-	* configure.in: Remove useless is_mingw32.
-	* configure: Rebuilt.
 
 2002-03-12  Loren Rittle  <ljrittle@acm.org>
 
