--- a/gcc-3_1-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_1-branch/libstdc++-v3/ChangeLog
@@ -2,11 +2,18 @@
 
 	PR target/5676
 	* acinclude.m4 (GLIBCPP_ENABLE_SJLJ_EXCEPTIONS): Pass -fexceptions
-	explicitely.
+	explicitedly.
 	* aclocal.m4: Rebuilt.
 	* configure: Rebuilt.
 	* configure.target (mcore-*-pe*): Add -frtti -fno-exceptions
 	by default to c++ flags.
+
+2002-03-25  Benjamin Kosnik  <bkoz@redhat.com>
+            Jakub Jelinek  <jakub@redhat.com>
+	
+	* config/locale/gnu/messages_members.h: Correct conditional.
+	* config/locale/gnu/messages_members.cc: Same.
+	* config/locale/gnu/time_members.cc: Same.
 
 2002-03-25  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
             Paolo Carlini  <pcarlini@unitus.it>
@@ -14,6 +21,12 @@
 	* testsuite/22_locale/codecvt_members_unicode_char.cc
 	(test01, test02): Fix i_lit_base arrays, making them
 	independent from the endianness of the platform.
+
+2002-03-22  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* config/locale/gnu/messages_members.h: Add __uselocale bits.
+	* config/locale/gnu/messages_members.cc: Same.
+	* config/locale/gnu/time_members.cc: Same.
 
 2002-03-22  Benjamin Kosnik  <bkoz@redhat.com>
 	
