--- a/gcc-3_1-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_1-branch/libstdc++-v3/ChangeLog
@@ -2,7 +2,7 @@
 
 	PR target/5676
 	* acinclude.m4 (GLIBCPP_ENABLE_SJLJ_EXCEPTIONS): Pass -fexceptions
-	explicitedly.
+	explicitly.
 	* aclocal.m4: Rebuilt.
 	* configure: Rebuilt.
 	* configure.target (mcore-*-pe*): Add -frtti -fno-exceptions
@@ -21,6 +21,24 @@
 	* testsuite/22_locale/codecvt_members_unicode_char.cc
 	(test01, test02): Fix i_lit_base arrays, making them
 	independent from the endianness of the platform.
+
+2002-03-22  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* acinclude.m4 (GLIBCPP_CHECK_COMPLEX_MATH_SUPP): Just test for
+	signbit and __signbit directly.
+	* aclocal.m4: Regenerate.
+	* configure: Regenerate.
+	* config.h.in: Regenerate.
+	* libmath/Makefile.am: Simplify.
+	* libmath/Makefile.in: Regenerate.
+	* include/c_std/std_cmath.h: Update paths for include of cmath.tcc.
+
+	* include/Makefile.am: Clean up handling of extra "C" header files.
+	Add hooks for "C" compatibility headers.
+	* include/Makefile.in: Regenerate.
+
+	* include/c/*: Formatting tweaks, cleanups.
+	* include/c_std/*: Same.
 
 2002-03-22  Benjamin Kosnik  <bkoz@redhat.com>
 
