--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-25  Richard Henderson  <rth@redhat.com>
+
+	* gcc.c-torture/compile/20011119-1.c (xxx): New.
+	* gcc.c-torture/compile/20011119-2.c (xxx): New.
+
 2002-03-25  Bob Wilson  <bob.wilson@acm.org>
 
 	* g++.old-deja/g++.jason/thunk3.C: Add xtensa-*-* to list of
