--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-25  Zack Weinberg  <zack@codesourcery.com>
+
+	* lex.c: Change java_perform_atof to take normal parameters
+	instead of a pointer to a parameter block.  Call it directly
+	from java_lex.
+
 2002-03-22  Mark Wielaard  <mark@klomp.org>
 
 	Fix for PR java/5368:
@@ -32,10 +38,10 @@
 
 2002-03-20  Nic Ferrier  <nferrier@tapsellferrier.co.uk>
 
-       	* gcj.texi: @code{gcj} becomes @command{gcj}. 
-	@code{gcc} becomes @command{gcc}. 
-        GcjRaw changed to gnu.gcc.RawData.
-	
+       	* gcj.texi: @code{gcj} becomes @command{gcj}.
+	@code{gcc} becomes @command{gcc}.
+	GcjRaw changed to gnu.gcc.RawData.
+
 2002-03-20  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* decl.c (start_java_method): Use new hook.
@@ -257,18 +263,18 @@
 
 2002-02-20  Nic Ferrier  <nferrier@tapsellferrier.co.uk>
 
-	* gcj.texi: Option `--classpath' becomes `--CLASSPATH.'Option 
-	`--CLASSPATH' becomes `--classpath.' 
-	* gjavah.c: Likewise. 
-	* jcf-dump.c: Likewise. 
-	* lang-options.h: Likewise. 
-	* lang.c: Likewise. 
-	* jcf-path.c: Updated comment. 
-	(jcf_path_classpath_arg): Renamed `jcf_path_CLASSPATH_arg.' 
-	(jcf_path_CLASSPATH_arg): Renamed `jcf_path_classpath_arg.' 
-	* jcf.h (jcf_path_CLASSPATH_arg): Ditto. 
-	(jcf_path_CLASSPATH_arg): Ditto. 
-	(classpath_u): Updated leading comment. 
+	* gcj.texi: Option `--classpath' becomes `--CLASSPATH.'Option
+	`--CLASSPATH' becomes `--classpath.'
+	* gjavah.c: Likewise.
+	* jcf-dump.c: Likewise.
+	* lang-options.h: Likewise.
+	* lang.c: Likewise.
+	* jcf-path.c: Updated comment.
+	(jcf_path_classpath_arg): Renamed `jcf_path_CLASSPATH_arg.'
+	(jcf_path_CLASSPATH_arg): Renamed `jcf_path_classpath_arg.'
+	* jcf.h (jcf_path_CLASSPATH_arg): Ditto.
+	(jcf_path_CLASSPATH_arg): Ditto.
+	(classpath_u): Updated leading comment.
 
 2002-02-20  Per Bothner  <per@bothner.com>
 
@@ -352,7 +358,7 @@
 	current_function_decl before building JNI stub.
 
 2002-01-26 Andreas Tobler <a.tobler@schweiz.ch>
-	
+
 	* gcc/java/builtins.c (sqrt_builtin): Use BUILT_IN_SQRT, not
 	BUILT_IN_SQRTF.
 
