--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-25  Zack Weinberg  <zack@codesourcery.com>
+
+	* gcc.dg/c90-hexfloat-1.c: Adjust error regexps.
+
 2002-03-25  Bob Wilson  <bob.wilson@acm.org>
 
 	* g++.old-deja/g++.jason/thunk3.C: Add xtensa-*-* to list of
@@ -62,7 +66,7 @@
 
 2002-03-22  Neil Booth  <neil@daikokuya.demon.co.uk>
 
-        * gcc.dg/cpp/multiline.c: Update to match.
+	* gcc.dg/cpp/multiline.c: Update to match.
 
 2002-03-22  Alexandre Oliva  <aoliva@redhat.com>
 
@@ -74,13 +78,13 @@
 
 2002-03-21  David Edelsohn  <edelsohn@gnu.org>
 
-        * gcc.dg/20020312-2.c: Add rs6000 target.
+	* gcc.dg/20020312-2.c: Add rs6000 target.
 
 	* gcc.c-torture/compile/20020319-1.c: New test.
 
 2002-03-21  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
-	* g++.old-deja/g++.eh/ia64-1.C: Use [ijkl]_[0-9] as variable names. 
+	* g++.old-deja/g++.eh/ia64-1.C: Use [ijkl]_[0-9] as variable names.
 	(A, E): Handle this.
 
 2002-03-20  Jason Merrill  <jason@redhat.com>
@@ -197,7 +201,7 @@ Thu Mar 14 14:28:38 2002  Jeffrey A Law  (law@cygnus.com)
 
 2002-03-12  David Edelsohn  <edelsohn@gnu.org>
 
-        * gcc.dg/20020103-1.c: Add rs6000 target and macro.
+	* gcc.dg/20020103-1.c: Add rs6000 target and macro.
 
 2002-03-12  Roger Sayle  <roger@eyesopen.com>
 
@@ -205,7 +209,7 @@ Thu Mar 14 14:28:38 2002  Jeffrey A Law  (law@cygnus.com)
 
 2002-03-11  Aldy Hernandez  <aldyh@redhat.com>
 
-        * gcc.dg/altivec-1.c: Cleanup and use altivec.h.
+	* gcc.dg/altivec-1.c: Cleanup and use altivec.h.
 
 2002-03-11  Richard Henderson  <rth@redhat.com>
 
@@ -279,7 +283,7 @@ Thu Mar  7 10:05:31 2002  Jeffrey A Law  (law@redhat.com)
 
 2002-03-03  Aldy Hernandez  <aldyh@redhat.com>
 
-        * gcc.dg/20020103-1.c: Add other -D ppc variants.
+	* gcc.dg/20020103-1.c: Add other -D ppc variants.
 
 2002-03-02  Nathan Sidwell  <nathan@codesourcery.com>
 
