--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-25  Richard Henderson  <rth@redhat.com>
+
+	* gcc.c-torture/compile/20011119-1.c (xxx): New.
+	* gcc.c-torture/compile/20011119-2.c (xxx): New.
+
 2002-03-25  Zack Weinberg  <zack@codesourcery.com>
 
 	* gcc.dg/c90-hexfloat-1.c: Adjust error regexps.
