--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,3 +1,15 @@
+2002-03-25  Tom Tromey  <tromey@redhat.com>
+
+	For PR libgcj/5303:
+	* gnu/java/rmi/registry/RegistryImpl.java (main): Recognize --help
+	and --version.
+	(help): New method.
+	(version): Likewise.
+	* gnu/gcj/convert/Convert.java (version): Removed extraneous
+	"GNU".
+	* gnu/java/rmi/rmic/RMIC.java (parseOptions): Removed extraneous
+	"GNU".
+
 2002-03-24  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* java/io/PushbackReader.java: Reformat.
