--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,5 +1,8 @@
 2002-03-25  Richard Henderson  <rth@redhat.com>
 
+	* gcc.dg/20001013-1.c: Add -mcpu=ultrasparc.  Only run on
+	sparcv9 systems.
+
 	* gcc.c-torture/compile/20011119-1.c (xxx): New.
 	* gcc.c-torture/compile/20011119-2.c (xxx): New.
 
