* combine.c (simplify_comparison <ASHIFTRT, LSHIFTRT>): Correct 	test for overflow of constant.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51349 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-26  Alan Modra  <amodra@bigpond.net.au>
+
+	* combine.c (simplify_comparison <ASHIFTRT, LSHIFTRT>): Correct
+	test for overflow of constant.
+
 2002-03-25  Richard Earnshaw  <rearnsha@arm.com>
 
 	PR target/2623
