* Makefile.am (libgcj_la_LDFLAGS): Use THREADLDFLAGS. 	(jv_convert_LDFLAGS): Likewise. 	(gij_LDFLAGS): Likewise. 	(rmic_LDFLAGS): Likewise. 	(rmiregistry_LDFLAGS): Likewise. 	* configure.in (THREADLDFLAGS): New subst; set correctly for 	*BSD.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51361 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,5 +1,15 @@
 2002-03-25  Tom Tromey  <tromey@redhat.com>
 
+	* Makefile.am (libgcj_la_LDFLAGS): Use THREADLDFLAGS.
+	(jv_convert_LDFLAGS): Likewise.
+	(gij_LDFLAGS): Likewise.
+	(rmic_LDFLAGS): Likewise.
+	(rmiregistry_LDFLAGS): Likewise.
+	* configure.in (THREADLDFLAGS): New subst; set correctly for
+	*BSD.
+
+2002-03-25  Tom Tromey  <tromey@redhat.com>
+
 	For PR libgcj/5303:
 	* gnu/java/rmi/registry/RegistryImpl.java (main): Recognize --help
 	and --version.
