* doc/cpp.texi: Exclude entire Top node from printed manual. 	Move option index after directive index.  Insert page breaks 	before GFDL and concept index.  Index environment variables 	with command line options. 	* doc/cppenv.texi: Use @vtable for environment variable list. 	Add paragraph explaining semantics of empty elements in path 	variables.  Exclude a cross-reference to Fishkill from the 	manpage.  Remove an unnecessary cross-reference of the entry 	right above the referer.  Don't use @anchor in text that goes 	into manpage. 	* doc/cppopts.texi: Cross-reference the environment variables 	section, not the specific environment variable, for consistency.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51365 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/cpp.texi
+++ b/gcc/doc/cpp.texi
@@ -9,7 +9,7 @@
 @macro copyrightnotice
 @c man begin COPYRIGHT
 Copyright @copyright{} 1987, 1989, 1991, 1992, 1993, 1994, 1995, 1996,
-1997, 1998, 1999, 2000, 2001
+1997, 1998, 1999, 2000, 2001, 2002
 Free Software Foundation, Inc.
 
 Permission is granted to copy, distribute and/or modify this document
@@ -48,6 +48,7 @@ This manual contains no Invariant Sections.  The Front-Cover Texts are
 
 @c Create a separate index for command line options.
 @defcodeindex op
+@syncodeindex vr op
 
 @c Used in cppopts.texi and cppenv.texi.
 @set cppmanual
@@ -75,6 +76,7 @@ This manual contains no Invariant Sections.  The Front-Cover Texts are
 @contents
 @page
 
+@ifnottex
 @node Top
 @top
 The C preprocessor implements the macro language used to transform C,
@@ -96,8 +98,8 @@ useful on its own.
 * Invocation::
 * Environment Variables::
 * GNU Free Documentation License::
-* Option Index::
 * Index of Directives::
+* Option Index::
 * Concept Index::
 
 @detailmenu
@@ -179,7 +181,6 @@ Obsolete Features
 @end detailmenu
 @end menu
 
-@ifnottex
 @copyrightnotice{}
 @covertexts{}
 @end ifnottex
@@ -3949,21 +3950,22 @@ configuration of GCC@.
 @include cppenv.texi
 @c man end
 
+@page
 @include fdl.texi
 
 @page
-@node Option Index
-@unnumbered Option Index
-
-CPP's command line options are indexed here without any initial
-@samp{-} or @samp{--}.
-
-@printindex op
-
 @node Index of Directives
 @unnumbered Index of Directives
 @printindex fn
 
+@node Option Index
+@unnumbered Option Index
+@noindent
+CPP's command line options and environment variables are indexed here
+without any initial @samp{-} or @samp{--}.
+@printindex op
+
+@page
 @node Concept Index
 @unnumbered Concept Index
 @printindex cp
