--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,18 @@
+2002-03-25  Zack Weinberg  <zack@codesourcery.com>
+
+	* doc/cpp.texi: Exclude entire Top node from printed manual.
+	Move option index after directive index.  Insert page breaks
+	before GFDL and concept index.  Index environment variables
+	with command line options.
+	* doc/cppenv.texi: Use @vtable for environment variable list.
+	Add paragraph explaining semantics of empty elements in path
+	variables.  Exclude a cross-reference to Fishkill from the
+	manpage.  Remove an unnecessary cross-reference of the entry
+	right above the referer.  Don't use @anchor in text that goes
+	into manpage.
+	* doc/cppopts.texi: Cross-reference the environment variables
+	section, not the specific environment variable, for consistency.
+
 2002-03-25  Richard Henderson  <rth@redhat.com>
 
 	* recog.c (peephole2_optimize): Distribute EH_REGION -1 notes
