--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-25  Bruce Korb  <bkorb@gnu.org>
+
+	* Makefile.in(check-fixinc): run "$(MAKE) check" in the fixinc
+	directory when autogen is detected.
+
 2002-03-25  Richard Henderson  <rth@redhat.com>
 
 	* recog.c (peephole2_optimize): Distribute EH_REGION -1 notes
