* Makefile.in (ggc-common.o): Update. 	* c-decl.c (lang_mark_tree): Rename c_mark_tree. 	* c-lang.c (LANG_HOOKS_MARK_TREE): Redefine. 	* c-tree.h (c_mark_tree): New. 	* ggc-common.c: Include langhooks.h. 	(gcc_mark_trees): Use new langhook. 	* ggc-callbacks.c: Delete file. 	* ggc.h (lang_mark_tree): Remove. 	* langhooks-def.h (LANG_HOOKS_MARK_TREE): New. 	(LANG_HOOKS_INITIALIZER): Update. 	* langhooks.h (struct lang_hooks): New hook. ada: 	* misc.c (LANG_HOOKS_MARK_TREE): Redefine. 	(lang_mark_tree): Make static, rename. cp: 	* cp-lang.c (LANG_HOOKS_MARK_TREE): Redefine. 	* cp-tree.h (cxx_mark_tree): New. 	* decl.c (lang_mark_tree): Rename cxx_mark_tree. f: 	* com.c (LANG_HOOKS_MARK_TREE): Redefine. 	(lang_mark_tree): Rename ffe_mark_tree, make static. java: 	* decl.c (lang_mark_tree): Rename java_mark_tree. 	* java-tree.h (java_mark_tree): New. 	* java-lang.c (LANG_HOOKS_MARK_TREE): Redefine. objc: 	* objc-lang.c (LANG_HOOKS_MARK_TREE): Redefine.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51369 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,19 @@
+2002-03-26  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* Makefile.in (ggc-common.o): Update.
+	* c-decl.c (lang_mark_tree): Rename c_mark_tree.
+	* c-lang.c (LANG_HOOKS_MARK_TREE): Redefine.
+	* c-tree.h (c_mark_tree): New.
+	* ggc-common.c: Include langhooks.h.
+	(gcc_mark_trees): Use new langhook.
+	* ggc-callbacks.c: Delete file.
+	* ggc.h (lang_mark_tree): Remove.
+	* langhooks-def.h (LANG_HOOKS_MARK_TREE): New.
+	(LANG_HOOKS_INITIALIZER): Update.
+	* langhooks.h (struct lang_hooks): New hook.
+objc:
+	* objc-lang.c (LANG_HOOKS_MARK_TREE): Redefine.
+
 2002-03-25  Zack Weinberg  <zack@codesourcery.com>
 
 	* doc/cpp.texi: Exclude entire Top node from printed manual.
