--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-26  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* misc.c (LANG_HOOKS_MARK_TREE): Redefine.
+	(lang_mark_tree): Make static, rename.
+
 2002-03-25  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* misc.c (maybe_build_cleanup): Remove.
