--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+Tue Mar 26 07:30:51 2002  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* com.c (LANG_HOOKS_MARK_TREE): Redefine.
+	(lang_mark_tree): Rename ffe_mark_tree, make static.
+
 Mon Mar 25 19:27:11 2002  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* com.c (maybe_build_cleanup): Remove.
