--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-26  Hartmut Penner  <hpenner@de.ibm.com>
+
+	* config/s390/s390.c (s390_emit_epilogue): Change epilogue
+	code to not restoring global registers. 
+
 2002-03-26  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* Makefile.in (ggc-common.o): Update.
