--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,11 +1,15 @@
-2002-02-26  David Billinghurst  <David.Billinghurst@riotinto.com>
+2002-03-26  Richard Henderson  <rth@redhat.com>
+
+        * gcc.c-torture/execute/20020307-2.c (main): Pass a variable sized
+        structure.
+
+2002-03-26  David Billinghurst  <David.Billinghurst@riotinto.com>
 
 	* lib/g++.exp:  Fix handling of LD_LIBRARY_PATH et al
 	* lib/g77.exp:  Likewise
 	* lib/objc.exp: Likewise
 	* gcc.dg/weak-1.c:  Early return from dg-final on platforms
 	that do not support weak symbols
-
 
 2002-03-25  Richard Henderson  <rth@redhat.com>
 
