--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-26  Richard Henderson  <rth@redhat.com>
+
+	* gcc.c-torture/execute/20020307-2.c (main): Pass a variable sized
+	structure.
+
 2002-03-25  Richard Henderson  <rth@redhat.com>
 
 	* gcc.dg/20001013-1.c: Add -mcpu=ultrasparc.  Only run on
