--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-26  Richard Henderson  <rth@redhat.com>
+
+	* config/sparc/sparc.c (function_arg_pass_by_reference): Pass
+	variable sized objects by reference.
+	(sparc_va_arg): Receive them by reference too.
+
 2002-03-25  Bruce Korb  <bkorb@gnu.org>
 
 	* Makefile.in(check-fixinc): run "$(MAKE) check" in the fixinc
