--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-26  Richard Henderson  <rth@redhat.com>
+
+	* config/sparc/sparc.c (function_arg_pass_by_reference): Pass
+	variable sized objects by reference.
+	(sparc_va_arg): Receive them by reference too.
+
 2002-03-26  Hartmut Penner  <hpenner@de.ibm.com>
 
 	* config/s390/s390.c (s390_emit_epilogue): Change epilogue
