--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2002-03-26  Richard Henderson  <rth@redhat.com>
 
+	* expr.h (ADD_PARM_SIZE): Cast INC to ssizetype.
+	(SUB_PARM_SIZE): Cast DEC to ssizetype.
+
+	* config/alpha/alpha.c (alpha_va_arg): Read MUST_PASS_IN_STACK
+	types from the normal argument frame.
+
 	* config/sparc/sparc.c (function_arg_pass_by_reference): Pass
 	variable sized objects by reference.
 	(sparc_va_arg): Receive them by reference too.
