--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-26  Hartmut Penner  <hpenner@de.ibm.com>
+
+        * config/s390/s390.c (s390_emit_epilogue): Change epilogue
+        code to not restoring global registers.
+
 2002-03-26  Richard Henderson  <rth@redhat.com>
 
 	* expr.h (ADD_PARM_SIZE): Cast INC to ssizetype.
