--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-26  Loren J. Rittle  <ljrittle@acm.org>
+
+	* include/posix-threads.h: Support <.../pal.h> on FreeBSD/alpha.
+
 2002-03-25  Andrew Haley <aph@cambridge.redhat.com>, Hans Boehm <Hans_Boehm@hp.com>
 
 	* configure.in, configure: enable dwarf2-exception-style
