--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-26  Loren J. Rittle  <ljrittle@acm.org>
+
+	* doc/install.texi (*-*-freebsd*): Update.
+
 2002-03-26  Richard Henderson  <rth@redhat.com>
 
 	* expr.h (ADD_PARM_SIZE): Cast INC to ssizetype.
