--- a/gcc/f/invoke.texi
+++ b/gcc/f/invoke.texi
@@ -1359,6 +1359,9 @@ Some of these have no effect when compiling programs written in Fortran:
 @cindex -Wswitch-default option
 @cindex options, -Wswitch-default
 @item -Wswitch-default
+@cindex -Wswitch-enum option
+@cindex options, -Wswitch-enum
+@item -Wswitch-enum
 @cindex -Wtraditional option
 @cindex options, -Wtraditional
 @item -Wtraditional
