* config/xtensa/xtensa.c (xtensa_valid_move): Allow move from         a register into the MAC16 accumulator.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51388 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-26  Bob Wilson  <bob.wilson@acm.org>
+
+	* config/xtensa/xtensa.c (xtensa_valid_move): Allow move from
+	a register into the MAC16 accumulator.
+
 2002-03-26  Andrew Cagney  <ac131313@redhat.com>
 
 	* doc/invoke.texi (Option Summary): Mention -Wswitch-enum.
