--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-26  Richard Earnshaw  <rearnsha@arm.com>
+
+	* gcc.dg/arm-asm.c: New test.
+
 2002-03-26  Andrew Cagney  <ac131313@redhat.com>
 
 	* gcc.dg/Wswitch-enum.c: New test.
