cp: 	PR c++/5682 	* cp-tree.h (BINFO_PRIMARY_P): Explain meaning better. 	(dfs_skip_nonprimary_vbases_unmarkedp): Remove. 	(dfs_skip_nonprimary_vbases_markedp): Remove. 	* search.c (get_shared_vbase_if_not_primary): Remove. 	(dfs_skip_nonprimary_vbases_unmarkedp): Remove. 	(dfs_skip_nonprimary_vbases_markedp): Remove. 	(dfs_unmarked_real_bases_queue_p): Just get the canonical binfo. 	(dfs_marked_real_bases_queue_p): Likewise. testsuite: 	* g++.dg/abi/vbase9.C: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51392 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-26  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/abi/vbase9.C: New test.
+
 2002-03-26  Richard Earnshaw  <rearnsha@arm.com>
 
 	* gcc.dg/arm-asm.c: New test.
