--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-26  Mark Mitchell  <mark@codesourcery.com>
+
+	* g++.dg/init/new1.C: New test.
+
 2002-03-26  Richard Henderson  <rth@redhat.com>
 
         * gcc.c-torture/execute/20020307-2.c (main): Pass a variable sized
