cp: 	PR c++/5682 	* cp-tree.h (BINFO_PRIMARY_P): Explain meaning better. 	(dfs_skip_nonprimary_vbases_unmarkedp): Remove. 	(dfs_skip_nonprimary_vbases_markedp): Remove. 	* search.c (get_shared_vbase_if_not_primary): Remove. 	(dfs_skip_nonprimary_vbases_unmarkedp): Remove. 	(dfs_skip_nonprimary_vbases_markedp): Remove. 	(dfs_unmarked_real_bases_queue_p): Just get the canonical binfo. 	(dfs_marked_real_bases_queue_p): Likewise. testsuite: 	* g++.dg/abi/vbase9.C: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51395 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/cp/ChangeLog
+++ b/gcc-3_1-branch/gcc/cp/ChangeLog
@@ -1,3 +1,15 @@
+2002-03-26  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/5682
+	* cp-tree.h (BINFO_PRIMARY_P): Explain meaning better.
+	(dfs_skip_nonprimary_vbases_unmarkedp): Remove.
+	(dfs_skip_nonprimary_vbases_markedp): Remove.
+	* search.c (get_shared_vbase_if_not_primary): Remove.
+	(dfs_skip_nonprimary_vbases_unmarkedp): Remove.
+	(dfs_skip_nonprimary_vbases_markedp): Remove.
+	(dfs_unmarked_real_bases_queue_p): Just get the canonical binfo.
+	(dfs_marked_real_bases_queue_p): Likewise.
+
 2002-03-26  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/4884.
