--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-27  Geert Bosch  <bosch@gnat.com>
+
+	* prj-makr.ads, prj-makr.adb : New files.
+
 2002-03-26  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* misc.c (LANG_HOOKS_MARK_TREE): Redefine.
