--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-26  Richard Henderson  <rth@redhat.com>
+
+	* expr.h (ADD_PARM_SIZE): One more convert for INC.
+
 2002-03-26  Phil Edwards  <pme@gcc.gnu.org>
 
 	* gcc.c (cpp_options):  Preserve relative ordering of -pedantic
@@ -5,6 +9,7 @@
 	(cc1_options):  Likewise.
 
 2002-03-26  Hans Boehm <Hans_Boehm@hp.com>
+
 	* config/ia64/linux.h (MD_FALLBACK_FRAME_STATE_FOR):
 	Restore more of the signal context.  Set no_reg_stack_frame.
 	* config/ia64/unwind-ia64.c (unw_state_record):
